--- a/iphone/Maps/LocalizedStrings/es-MX.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/es-MX.lproj/Localizable.strings
@@ -805,8 +805,6 @@
 
 "minute" = "min";
 
-"day" = "d";
-
 "placepage_more_button" = "Más";
 
 "book_button" = "Reservar";
@@ -1795,7 +1793,7 @@
 
 "type.barrier.chain" = "Cadena";
 
-"type.barrier.city_wall" = "Muralla";
+"type.barrier.city_wall" = "City Wall";
 
 "type.barrier.cycle_barrier" = "Barrera para bicicletas";
 
